--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/wellknown": "^0.5.8",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
